--- a/main.css
+++ b/main.css
@@ -12,7 +12,6 @@ header {
     align-items: center;
     border-bottom: 5px solid rgb(61, 3, 218);
     animation: RGB 5s infinite ease-in-out;
-
 }
 
 header img {
@@ -25,17 +24,20 @@ header img {
     0% {
         border-color: rgb(61, 3, 218);
     }
-    25% {
+    20% {
         border-color: rgb(91, 208, 255); 
     }
-    50% {
+    40% {
         border-color: rgb(0, 0, 255); 
     }
-    75% {
+    60% {
         border-color: rgb(86, 77, 204); 
     }
-    100% {
+    80% {
         border-color: rgb(0, 255, 255); 
+    }
+    100% {
+        border-color: rgb(15, 58, 197); 
     }
 } 
 
@@ -94,18 +96,15 @@ form label {
     margin-bottom: 10px;
 }
 
+
 main section{
-    padding: 20px;
     align-items: center;
-    width: 100%;
-    margin: auto;
 }
 
 form input[type="text"],
 form input[type="email"],
 form textarea {
-    width: 100%;
-    padding: 10px;
+
     margin-bottom: 10px;
     border: 1pxsolid #ccc;
     border-radius: 5px;
@@ -118,7 +117,6 @@ form textarea {
 form input[type="submit"] {
     background-color: #333;
     color: #fff;
-    padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -196,8 +194,39 @@ footer p {
 
 .Productosdestacados {
     overflow: hidden;
-    align-items: center;
-    max-width: 2500px;
+    max-width: 1500px;
     margin: auto;
+    text-align: center;
+    color: white;
+    padding: 15px;
     
+}
+
+.Productosdestacados img {
+    width: 250px;
+    height: 250px; 
+    border: 4px solid rgb(61, 3, 218);
+    animation: RGB 5s infinite ease-in-out;
+    border-radius: 20px;
+    filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 1));
+    margin-bottom: 8px;
+}
+
+.Productosdestacados ul {
+    display: flex;
+    align-items: center;
+}
+
+.Productosdestacados li {
+    margin: 10px;
+}
+
+.Productosdestacados a {
+    color: white;
+}
+
+.Productosdestacados button {
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
 }
