--- a/main.css
+++ b/main.css
@@ -41,12 +41,33 @@ header img {
     }
 } 
 
-p {
+@keyframes RGB2 {
+    0% {
+        color: rgb(83, 177, 253);
+    }
+    20% {
+        color: rgb(91, 208, 255); 
+    }
+    40% {
+        color: rgb(255, 245, 178); 
+    }
+    60% {
+        color: rgb(64, 253, 152); 
+    }
+    80% {
+        color: rgb(0, 255, 255); 
+    }
+    100% {
+        color: rgb(93, 167, 209); 
+    }
+} 
+
+p, a {
     font-family: 'Barlow';
     font-weight: SemiBold;
 }
 
-h2 {
+h2,h1 {
     font-family: 'Rubik';
     font-weight: 900;
 }
@@ -195,16 +216,17 @@ footer p {
 .Productosdestacados {
     overflow: hidden;
     max-width: 1500px;
+    width: 80%;
     margin: auto;
     text-align: center;
     color: white;
     padding: 15px;
-    
+    justify-content:center;
 }
 
 .Productosdestacados img {
-    width: 250px;
-    height: 250px; 
+    width: 180px;
+    height: 180px;
     border: 4px solid rgb(61, 3, 218);
     animation: RGB 5s infinite ease-in-out;
     border-radius: 20px;
@@ -215,18 +237,88 @@ footer p {
 .Productosdestacados ul {
     display: flex;
     align-items: center;
+    justify-content:center;
+    width: 100%;
 }
 
 .Productosdestacados li {
     margin: 10px;
+    cursor: pointer;
 }
 
 .Productosdestacados a {
-    color: white;
+    color: rgb(1, 26, 110);
+    background-color: white;
+    display: block;
+    padding: 1px;
+    border-radius: 5px;
 }
 
 .Productosdestacados button {
     border-radius: 100%;
     width: 30px;
     height: 30px;
+}
+
+.MostrarMas {
+    justify-content:center;
+    display: flex;
+    margin: 0;
+    padding-bottom: 20px;
+    color: white;
+    animation: RGB2 5s infinite ease-in-out;
+    text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
+    font-weight: bold;
+}
+
+.Categorias {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.Categorias li {
+    width: calc(100% / 3);
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    margin-bottom: 10px;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 40px;
+
+}
+
+.Categorias li.Computadoras {
+    background-image: url("/images/COMPUTADORAS.jpg");
+    background-position: right center;
+    margin: 0;
+    filter: brightness(0.7) contrast(0.9);
+}
+
+.Categorias li.Laptops {
+    background-image: url("/images/laptops.avif");
+    margin: 0;
+}
+
+.Categorias li.Perifericos {
+    background-image: url("/images/perifericos.jpg");
+    margin: 0;
+}
+
+.Categorias li.Telefonos {
+    background-image: url("/images/telefonos.png");
+    margin: 0;
+}
+
+.Categorias li a {
+    color: white;
 }
