--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ h2,h1 {
 
 nav ul {
     list-style: none;
-    margin: 0;
+    margin-right: 25px;
     padding: 0;
     display: flex;
     gap: 20px;
@@ -244,6 +244,7 @@ footer p {
 .Productosdestacados li {
     margin: 10px;
     cursor: pointer;
+
 }
 
 .Productosdestacados a {
@@ -282,7 +283,7 @@ footer p {
 }
 
 .Categorias li {
-    width: calc(100% / 3);
+    width: calc(100% / 4);
     background-size: cover;
     background-position: center;
     height: 400px;
@@ -298,32 +299,97 @@ footer p {
     border-left: 1px solid #ffffff;
     border-width: 1px solid #ffffff;
     animation: RGB 5s infinite ease-in-out;
-
-}
-
-.Categorias li.Computadoras {
-    background-image: url("/images/COMPUTADORAS.jpg");
-    background-position: right center;
     margin: 0;
-    filter: brightness(0.7) contrast(0.9);
 
 }
 
-.Categorias li.Laptops {
+.Categorias li.Computadoras::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("/images/COMPUTADORAS.jpg"); 
+    filter: brightness(0.6);
+    z-index: 0;
+}
+
+.Categorias li.Computadoras:hover{
+    border: 3px solid #ffffff;
+    animation: RGB 5s infinite ease-in-out;
+    cursor: pointer;
+}
+
+.Categorias li.Laptops:hover{
+    border: 3px solid #ffffff;
+    animation: RGB 5s infinite ease-in-out;
+    cursor: pointer;
+}
+
+.Categorias li.Perifericos:hover{
+    border: 3px solid #ffffff;
+    animation: RGB 5s infinite ease-in-out;
+    cursor: pointer;
+}
+
+.Categorias li.Telefonos:hover{
+    border: 3px solid #ffffff;
+    animation: RGB 5s infinite ease-in-out;
+    cursor: pointer;
+}
+
+.Categorias li.Laptops::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     background-image: url("/images/laptops.avif");
-    margin: 0;
+    filter: brightness(0.6); 
+    z-index: 0;
 }
 
-.Categorias li.Perifericos {
+.Categorias li.Perifericos::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     background-image: url("/images/perifericos.jpg");
-    margin: 0;
+    filter: brightness(0.6);
+    z-index: 0;
 }
 
-.Categorias li.Telefonos {
+.Categorias li.Telefonos::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     background-image: url("/images/telefonos.png");
-    margin: 0;
+    filter: brightness(0.6);
+    z-index: 0;
 }
 
 .Categorias li a {
     color: white;
+    font-weight: 900;
+    z-index: 1;
+    text-decoration: none;
 }
