--- a/main.css
+++ b/main.css
@@ -103,7 +103,14 @@ nav li input {
 }
 
 nav li button {
-    border-radius: 6px;
+    width: 80px;
+    height: 100%;
+    border-radius: 40px;
+    background: rgb(7, 50, 189)
+}
+
+nav li button a {
+    color: white;
 }
 
 ul {
@@ -222,6 +229,12 @@ footer p {
     border-radius: 20px;
     filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 1));
     margin-bottom: 8px;
+}
+
+.Productosdestacados img:hover {
+    width: 200px;
+    height: 200px;
+    filter: drop-shadow(2px 2px 6px rgba(255, 255, 255, 0.5));
 }
 
 .Productosdestacados ul {
@@ -438,7 +451,6 @@ footer p {
     padding:0 35px 0 5px;
     color: #000000;
     margin-bottom: 10px;
-    border: 1pxsolid #ccc;
     border-radius: 5px;
     overflow-wrap: break-word;
 }
@@ -455,7 +467,64 @@ footer p {
     padding:0 35px 0 5px;
     color: #000000;
     margin-bottom: 10px;
-    border: 1pxsolid #ccc;
     border-radius: 5px;
     overflow-wrap: break-word;
+}
+
+@keyframes RGB3 {
+    0% {
+        background-color: rgb(61, 3, 218);
+    }
+    20% {
+        background-color: rgb(91, 208, 255); 
+    }
+    40% {
+        background-color: rgb(0, 0, 255); 
+    }
+    60% {
+        background-color: rgb(86, 77, 204); 
+    }
+    80% {
+        background-color: rgb(0, 255, 255); 
+    }
+    100% {
+        background-color: rgb(15, 58, 197); 
+    }
+} 
+
+@keyframes BlackWhite {
+    0% {
+        color: rgb(255, 255, 255);
+    }
+    20% {
+        color: rgb(0, 0, 0);
+    }
+    40% {
+        color: rgb(255, 255, 255);
+    }
+    60% {
+        color: rgb(255, 255, 255);
+    }
+    80% {
+        color: rgb(0, 0, 0);
+    }
+    100% {
+        color: rgb(255, 255, 255);
+    }
+} 
+
+.BotonRegistrar {
+    background-color: rgb(61, 3, 218);
+    animation: RGB3 10s infinite ease-in-out;
+}
+
+.BotonRegistrar a {
+    color: white;
+    animation: BlackWhite 10s infinite ease-in-out;
+}
+
+.mapa {
+    padding: 50px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
